@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.infowars"
        name="Infowars"
-       version="0.1.2"
+       version="0.1.3"
        provider-name="Prafit">
   <requires>
         <import addon="xbmc.python" version="2.1.0"/>
